--- a/front/desafio-nf-front/src/assets/components/Formulario.module.css
+++ b/front/desafio-nf-front/src/assets/components/Formulario.module.css
@@ -1,19 +1,50 @@
 .form_container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  margin: 0 auto;
   background-color: #111010;
-  padding: 25px;
-  border-radius: 25px;
+  text-align: center;
+  margin-top: 4em;
+  padding: 20px;
+  border-radius: 20px;
 }
 
-.form_container input {
-  margin: 15px 0;
+
+
+.form_filho input {
+  margin: 2px 0 15px 0;
   padding: 15px;
   border-radius: 20px;
   border: none;
+  width: 90%;
+  outline: none;
 }
 
-.form_container label{
+.form_filho h1{
+  color: #fff;
+}
+
+.form_container label {
+  color: #fff;
   display: flex;
   left: 0;
+}
+
+.form_filho  button{
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  border: none;
+  background-color: #222;
+  color: #fff;
+  border-radius: 15px;
+  font-size: 1.5em;
+}
+
+.form_filho button:hover {
+  background-color: rgb(13, 26, 13);
+  cursor: pointer;
+
 }
